--- a/packages/ui/src/style/Home.css
+++ b/packages/ui/src/style/Home.css
@@ -8,7 +8,6 @@
     width: auto;
   }
 }
-
 table {
   width: 100%;
 }
@@ -32,8 +31,7 @@ td.delete a {
 tr:hover td.delete a {
   display: inline;
 }
-
-input[type=text] {
+.input-todo {
   font-size: 16px;
   box-sizing: border-box;
   width: 100%;
@@ -41,4 +39,21 @@ input[type=text] {
 }
 input[type=text]:focus {
   outline: none;
+}
+h1{
+  color: #DB4437;
+}
+.logout-button{
+  padding: 5px 10px;
+  color: grey;
+  font-weight: 600;
+  background-color: white;
+  border-radius: 5px;
+  border: 0px solid black;
+  margin: auto 0px auto auto;
+  cursor: pointer;
+}
+.header-container{
+  display: flex;
+  flex-direction: row;
 }
