--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -13,3 +13,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  font-size: 16px;
+  padding: 8px;
+  background: #eee;
+  border: 1px solid #ccc;
+}
+
+input[type=email],
+input[type=text],
+input[type=password]{
+  padding: 4px 2px;
+  font-size: 16px;
+  box-sizing: border-box;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+
+input[type=email]:focus,
+input[type=text]:focus,
+input[type=password]:focus{
+  outline: none;
+}
