--- a/packages/ui/src/style/Home.css
+++ b/packages/ui/src/style/Home.css
@@ -31,24 +31,35 @@ td.delete a {
 tr:hover td.delete a {
   display: inline;
 }
-
-h1{
-  color: #DB4437;
-}
-.logout-button{
-  padding: 5px 10px;
-  color: grey;
-  font-weight: 600;
-  background-color: white;
-  border-radius: 5px;
-  border: 0px solid black;
-  margin: auto 0px auto auto;
-  cursor: pointer;
-}
 .header-container{
   display: flex;
   flex-direction: row;
 }
-.container .input-todo {
-  border:none;
+.header-container .input-todo {
+  flex-grow: 1;
+}
+.header-container .user {
+  position: relative;;
+}
+.user .dropdown {
+  margin-top: 10px;
+  min-width: 200px;
+  right: 0;
+  position: absolute;
+  border: solid 1px rgba(0,0,0,.2);
+  background: #fff;
+  box-shadow: 0 2px 10px rgba(0,0,0,.2);
+  border-bottom: none;
+}
+.dropdown .item {
+  padding: 10px 10px 10px 30px;
+  display: block;
+  border-bottom: 1px solid #ccc;
+}
+.avatar {
+  height: 30px;
+  width: 30px;
+  background-position: center;
+  background-size: 100%;
+  border-radius: 40px;
 }
