--- a/packages/ui/src/style/Home.css
+++ b/packages/ui/src/style/Home.css
@@ -42,6 +42,7 @@ tr:hover td.delete a {
   position: relative;;
 }
 .user .dropdown {
+  display: none;
   margin-top: 10px;
   min-width: 200px;
   right: 0;
@@ -57,6 +58,7 @@ tr:hover td.delete a {
   border-bottom: 1px solid #ccc;
 }
 .avatar {
+  background-color: #ccc;
   height: 30px;
   width: 30px;
   background-position: center;
