--- a/packages/ui/src/style/Home.css
+++ b/packages/ui/src/style/Home.css
@@ -31,36 +31,29 @@ td.delete a {
 tr:hover td.delete a {
   display: inline;
 }
-.header-container{
+.input-todo {
+  flex-grow: 1;
+  margin: 30px 0 8px;
+}
+.header-container {
   display: flex;
   flex-direction: row;
 }
-.header-container .input-todo {
+.header-container .title {
   flex-grow: 1;
+  margin-top: 0;
 }
 .header-container .user {
-  position: relative;;
+  display: flex;
+  flex-direction: row;
 }
-.user .dropdown {
-  display: none;
-  margin-top: 10px;
-  min-width: 200px;
-  right: 0;
-  position: absolute;
-  border: solid 1px rgba(0,0,0,.2);
-  background: #fff;
-  box-shadow: 0 2px 10px rgba(0,0,0,.2);
-  border-bottom: none;
-}
-.dropdown .item {
-  padding: 10px 10px 10px 30px;
-  display: block;
-  border-bottom: 1px solid #ccc;
+.user .name {
+  margin-left: 10px;
 }
 .avatar {
   background-color: #ccc;
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   background-position: center;
   background-size: 100%;
   border-radius: 40px;
