--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -37,3 +37,17 @@ input[type=text]:focus,
 input[type=password]:focus{
   outline: none;
 }
+
+.link-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
+.link-button:hover,
+.link-button:focus {
+text-decoration: none;
+}
