--- a/packages/ui/src/style/Login.css
+++ b/packages/ui/src/style/Login.css
@@ -27,12 +27,14 @@
     display: flex;
     flex-direction: row;
 }
-.social-login a {
+.social-login button {
     flex-grow: 1;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
     color: rgba(0,0,0,.7);
+    background: transparent;
+    border:none
 }
 .social-login a:visited {
     color: rgba(0,0,0,.7);
