Add 404 error page

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -51,3 +51,8 @@ input[type=password]:focus{
 .link-button:focus {
 text-decoration: none;
 }
+
+.text-404 {
+  margin-top: 40px;
+  text-align: center;
+}
